# rust-benchmarks

./: Cargo.toml  README.md
benches/: my_benchmark.rs
docs/: index.html
docs/ls-replacement/List files in directory/Buffer first reserving massive memory (to avoid allocation) then/base/: estimates.json  sample.json
docs/ls-replacement/List files in directory/Buffer first reserving massive memory (to avoid allocation) then/new/: benchmark.json  tukey.json
docs/ls-replacement/List files in directory/Buffer first reserving massive memory (to avoid allocation) then/report/: index.html
docs/ls-replacement/List files in directory/Buffer first then push each line then stdout/base/: estimates.json  sample.json
docs/ls-replacement/List files in directory/report/: index.html
docs/ls-replacement/report/: index.html
ls-replacement/: .gitignore  Cargo.toml  gen-big-folders.js
ls-replacement/benches/: my_benchmark.rs
ls-replacement/src/: buffer_first_then_stdout.rs  buffer_reserve_then_stdout.rs  directly_stdout.rs  directly_stdout_manual_std_lock.rs  parallel_buffer_first_then_stdout.rs
rm-replacement/: .gitignore  Cargo.toml  bench.sh  gen-big-folders.js
rm-replacement/benches/: my_benchmark.rs
rm-replacement/src/: lib.rs  main.rs  rm_parallel.rs
src/: buffer-first-then-stdout.rs  buffer_first_then_stdout.rs  buffer_reserve_then_stdout.rs  directly_stdout.rs  directly_stdout_manual_std_lock.rs  lib.rs  main.rs  parallel_buffer_first_then_stdout.rs
testing-heavy-lenghty-folder/: gen.js
(+18 files in other folders)
